added button on 404/500

--- a/public/404.html
+++ b/public/404.html
@@ -42,6 +42,18 @@
     height: 75vh;
     width: 100vw;
   }
+
+  .btn-404 {
+  font-color: #7C2DF8;
+  font-size: 24px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50px;
+  height: 55px;
+  width: 290px;
+}
   </style>
 </head>
 
@@ -52,5 +64,6 @@
     <img src="/images/Page404.svg">
     <h2 class="headers">We will talk to our guys <br> and tell them to stop playing <br> around and get back to work.</h2>
   </div>
+  <a href="/" class="btn-404">Back to Homepage</a>
 </body>
 </html>
