--- a/public/500.html
+++ b/public/500.html
@@ -42,6 +42,18 @@
     height: 75vh;
     width: 100vw;
   }
+
+  .btn-500 {
+  font-color: #7C2DF8;
+  font-size: 24px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50px;
+  height: 55px;
+  width: 290px;
+}
   </style>
 </head>
 
@@ -52,5 +64,6 @@
     <img src="/images/Page500.svg">
     <h2 class="headers">It looks like someone <br> has broken the internet. <br><br> We are on it!</h2>
   </div>
+  <a href="/" class="btn-500">Back to Homepage</a>
 </body>
 </html>
