added classic button style on the button

--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,7 @@
 <head>
   <title>Page error</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
@@ -44,7 +45,8 @@
   }
 
   .btn-404 {
-  font-color: #7C2DF8;
+  color: white;
+  background-color: #7C2DF8;
   font-size: 24px;
   font-family: 'Quicksand', sans-serif;
   font-weight: bold;
@@ -64,6 +66,6 @@
     <img src="/images/Page404.svg">
     <h2 class="headers">We will talk to our guys <br> and tell them to stop playing <br> around and get back to work.</h2>
   </div>
-  <a href="/" class="btn-404">Back to Homepage</a>
+  <a href="/" class="btn btn-404 my-5">Back to Homepage</a>
 </body>
 </html>
